# piscine-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md  cargo_deep_clean.sh  gitify.sh
DATA/: Cargo.toml
DATA/card_deck/src/: main.rs
DATA/changes/src/: main.rs
DATA/edit_distance/src/: lib.rs
DATA/is_anagram/: Cargo.toml
DATA/simple_hash/src/: lib.rs  main.rs
DATA/string_permutation/src/: main.rs
ERRORS/: Cargo.toml
ERRORS/banner/src/: lib.rs
ERRORS/boxing_todo/src/: main.rs
ERRORS/handling/src/: main.rs
ERRORS/panic/src/: lib.rs  main.rs
ERRORS/profanity_filter/src/: main.rs
ERRORS/unwrap_or_expect/src/: lib.rs
MEMORY/: Cargo.toml
MEMORY/armstrong_number/src/: lib.rs
MEMORY/borrow_me_the_reference/src/: main.rs
MEMORY/ownership/src/: lib.rs  main.rs
VARIABLES/: Cargo.toml
VARIABLES/fibonacci2/src/: lib.rs
VARIABLES/matrix_transposition/src/: lib.rs
VARIABLES/scalar/src/: lib.rs
VARIABLES/speed_transformation/src/: lib.rs
VARIABLES/temperature_conv/src/: lib.rs
adding/src/: main.rs
adding_twice/: Cargo.toml
adding_twice/src/: lib.rs  main.rs
armstrong_number/src/: lib.rs  main.rs
arrange_it/src/: lib.rs  main.rs
arrays/src/: lib.rs  main.rs
banner/src/: lib.rs  main.rs
bigger/src/: lib.rs  main.rs
binary_search/src/: lib.rs  main.rs
blood_types/src/: blood.rs  lib.rs  main.rs
border_cross/src/: lib.rs  main.rs
borrow/src/: main.rs
borrow_box/src/: lib.rs  main.rs
borrow_me_the_reference/src/: lib.rs  main.rs
bowling_score/src/: lib.rs  main.rs
box_it/src/: lib.rs  main.rs
box_recursion/src/: lib.rs  main.rs
boxing_todo/src/: err.rs  lib.rs  main.rs
capitalizing/src/: lib.rs  main.rs
card_deck/: Cargo.toml
card_deck/src/: lib.rs  main.rs
changes/src/: lib.rs  main.rs
cipher/src/: lib.rs  main.rs
circle/src/: lib.rs  main.rs
closures/src/: lib.rs  main.rs
collect/src/: lib.rs
commits_stats/: Cargo.toml
commits_stats/src/: lib.rs  main.rs
copy/src/: lib.rs  main.rs
delete_prefix/src/: lib.rs  main.rs
diamond_creation/src/: lib.rs  main.rs
does_it_fit/src/: areas_volumes.rs  lib.rs  main.rs
doubtful/src/: lib.rs  main.rs
drop_the_thread/src/: lib.rs  main.rs
easy_traits/src/: lib.rs  main.rs
edit_distance/src/: lib.rs  main.rs
error_types/: Cargo.toml
error_types/src/: lib.rs  main.rs
events/: Cargo.toml
events/src/: lib.rs  main.rs
expected_variable/src/: lib.rs  main.rs
find_factorial/src/: lib.rs
generics/src/: main.rs
generics_list/src/: lib.rs  main.rs
get_products/src/: lib.rs  main.rs
groceries/src/: lib.rs  main.rs
handling/src/: lib.rs  main.rs
hashing/src/: lib.rs  main.rs
highest/src/: lib.rs  main.rs
how_many_references/src/: lib.rs  main.rs
invert_sentence/src/: lib.rs  main.rs
is_anagram/src/: lib.rs
iterators/src/: lib.rs  main.rs
lalgebra_scalar/src/: lib.rs  main.rs  scalar.rs
lalgebra_vector/: Cargo.toml
lalgebra_vector/src/: lib.rs  main.rs
lifetimes/src/: main.rs
logic_number/: Cargo.toml
logic_number/src/: lib.rs
looping/src/: main.rs
luhn_algorithm/src/: lib.rs  main.rs
macro_calculator/src/: lib.rs  main.rs
macro_map/src/: lib.rs  main.rs
markdown_to_html/src/: lib.rs  main.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  main.rs
matrix_mult/: Cargo.toml
matrix_mult/src/: lib.rs  main.rs
matrix_ops/: Cargo.toml
matrix_ops/src/: lib.rs  main.rs
matrix_transposition/src/: lib.rs  main.rs
middle_day/: Cargo.toml
middle_day/src/: lib.rs  main.rs
minesweeper/src/: lib.rs  main.rs
mobs/src/: lib.rs  main.rs  mobs.rs
mobs/src/mobs/: boss.rs  member.rs
name_initials/src/: lib.rs  main.rs
ordinal/src/: lib.rs  main.rs
ownership/src/: lib.rs  main.rs
pangram/src/: lib.rs  main.rs
panic/src/: lib.rs  main.rs
pig_latin/src/: lib.rs
profanity_filter/src/: lib.rs  main.rs
project_motion/src/: lib.rs  main.rs  utils.rs
question_mark/src/: lib.rs  main.rs
ref_cell/src/: lib.rs  main.rs  messenger.rs
reverse_string/src/: lib.rs
rgb_match/src/: lib.rs  main.rs
roman_numbers/src/: lib.rs  main.rs
roman_numbers_iter/: Cargo.toml
roman_numbers_iter/src/: lib.rs  main.rs  roman.rs
rot/src/: lib.rs  main.rs
sales/src/: lib.rs  main.rs
scalar/src/: lib.rs  main.rs
scores/src/: lib.rs  main.rs
scytale_cipher/src/: lib.rs  main.rs
searching/src/: lib.rs  main.rs
shopping_mall/src/: lib.rs  main.rs
simple_hash/src/: main.rs
slices_to_map/src/: lib.rs  main.rs
speed_transformation/src/: lib.rs
spelling/src/: lib.rs  main.rs
stars/src/: lib.rs  main.rs
step_iterator/src/: lib.rs  main.rs
string_literals/src/: lib.rs  main.rs
string_permutation/: Cargo.toml
string_permutation/src/: lib.rs  main.rs
strings/src/: main.rs
talking/src/: lib.rs  main.rs
temperature_conv/src/: lib.rs
tic_tac_toe/src/: lib.rs  main.rs
to_url/src/: main.rs
traits/src/: food.rs  lib.rs  main.rs
tuples_refs/src/: lib.rs  main.rs
unwrap_or_expect/src/: lib.rs  main.rs
vector_operations/src/: lib.rs  main.rs
