[workspace]
members = [
    # VARIABLES
    "scalar",
    "temperature_conv",
    "speed_transformation",
    "looping",
    "groceries",
    "reverse_string",
    "find_factorial",
    "fibonacci2",
    "matrix_transposition",
    "division_and_remainder",
    "tuples_refs",

    # MEMORY
    "borrow",
    "doubtful",
    "to_url",
    "string_literals",
    "name_initials",
    "ownership",
    "copy",
    "borrow_me_the_reference",
    "tic_tac_toe",
    "arrange_it",
    "armstrong_number",

    # DATA
    "changes",
    "circle",
    "card_deck",
    "arrays",
    "strings",
    "capitalizing",
    "edit_distance",
    "simple_hash",
    "bigger",
    "string_permutation",
    "hashing",
    "collect",
    "is_anagram",

    # ERRORS
    "unwrap_or_expect",
    "panic",
    "handling",
    "profanity_filter",
    "question_mark",
    "banner",
    "cipher",
    "error_types",
    "boxing_todo",
    "binary_search",

    # CRATES
    "middle_day",
    "does_it_fit",
    "macro_calculator",
    "shopping_mall",
    "expected_variable",
    "mobs",
    "invert_sentence",

    # PATTERNS
    "stars",
    "scores",
    "searching",
    "ordinal",
    "pangram",
    "talking",
    "logic_number",
    "rot",
    "rgb_match",
    "pig_latin",
    "scytale_cipher",
    "diamond_creation",
    "spelling",
    "luhn_algorithm",

    # POINTERS
    "box_it",
    "borrow_box",
    "box_recursion",
    "how_many_references",
    "ref_cell",
    "drop_the_thread",
    "bowling_score",       # TODO: FAILED!

    # TRAITS
    "generics",
    "generics_list",
    "easy_traits",
    "traits",
    "blood_types",
    "vector_operations",
    "roman_numbers",
    "lalgebra_scalar",
    "lalgebra_vector",
    "commits_stats",
    "minesweeper",

    # LIFETIMES
    "matrix",
    "matrix_ops",
    "matrix_mult",
    "lifetimes",
    "delete_prefix",
    "border_cross",
    "events",
    "macro_map",

    # FEATURES
    "closures",
    "sales",
    "adding",
    "adding_twice",
    "get_products",
    "highest",
    "iterators",
    "roman_numbers_iter",
    "slices_to_map",
    "step_iterator",
    "project_motion",
    "markdown_to_html",
]
resolver = "2"
